--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -194,7 +194,9 @@
     }
    ],
    "source": [
+    "#Find total number of players by finding count of unique items in the Screen Name \"SN\" column\n",
     "players_count = len(purchase_data[\"SN\"].unique())\n",
+    "#Create dataframe to display the Total Players calculated in the players_count variable.\n",
     "Total_Players = pd.DataFrame({\"Total Players\": [players_count]})\n",
     "Total_Players"
    ]
@@ -279,14 +281,17 @@
     }
    ],
    "source": [
+    "#Calculations stored in variables for number of unique items, average price, number of purchases and total revenue\n",
     "Number_of_Unique_Items = len(purchase_data[\"Item ID\"].unique())\n",
     "Average_Price = purchase_data[\"Price\"].sum()/len(purchase_data[\"Price\"])\n",
     "Number_of_Purchases = len(purchase_data[\"Purchase ID\"])\n",
     "Total_Revenue = purchase_data[\"Price\"].sum()\n",
+    "#Create dataframe with calculations using a dictionary of list\n",
     "calculations_list = pd.DataFrame({\"Number of Unique Items\": [Number_of_Unique_Items],\n",
     "                                  \"Average Price\": Average_Price,\n",
     "                                  \"Number of Purchases\": [Number_of_Purchases],\n",
     "                                  \"Total Revenue\": Total_Revenue})\n",
+    "#Add \"Average Price\" and \"Total Revenue\" columns to the calculations_list dataframe with formatting\n",
     "calculations_list[\"Average Price\"] = calculations_list[\"Average Price\"].map(\"${:.2f}\".format)\n",
     "calculations_list[\"Total Revenue\"] = calculations_list[\"Total Revenue\"].map(\"${:,}\".format)\n",
     "calculations_list"
@@ -316,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -371,12 +376,30 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Create genders dataframe with \"SN\" and \"Gender\" columns from purchase_data dataframe\n",
+    "genders = purchase_data[[\"SN\", \"Gender\"]]\n",
+    "#Remove duplicate values from the genders dataframe\n",
+    "genders = genders.drop_duplicates()\n",
+    "#Count the number of values for each gender in the \"Gender\" column and store in a list\n",
+    "gender_count = []\n",
+    "genders_count = genders[\"Gender\"].value_counts()\n",
+    "#Calculate the combined total number of players\n",
+    "genders_total = len(genders[\"Gender\"])\n",
+    "#calcualte the percentage of total players each gender equates to\n",
+    "genders_percentage = [(genders_count[0]/genders_total)*100,\n",
+    "                       (genders_count[1]/genders_total)*100,\n",
+    "                       (genders_count[2]/genders_total)*100]\n",
+    "#create genders dataframe that includes Total Count and Percentage of Players columns and format the Percentage of Players column.\n",
+    "genders_df = pd.DataFrame({\"Total Count\": genders_count, \"Percentage of Players\": genders_percentage}) \n",
+    "genders_df[\"Percentage of Players\"] = genders_df[\"Percentage of Players\"].map(\"{:.2f}%\".format)\n",
+    "genders_df\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,7 +511,15 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#purchases_by_gender_df = purchase_data[[\"SN\", \"Gender\", \"Purchase ID\", \"Price\"]]\n",
+    "#purchase_count = len(purchases_by_gender_df[\"Purchase ID\"])\n",
+    "#avg_purchase_price = purchases_by_gender_df[\"Price\"].sum()/purchase_count\n",
+    "#total_purchase_value = \n",
+    "#avg_total_per_person = \n",
+    "\n",
+    "gender_groups = purchase_df.groupby([\"Gender\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -545,73 +576,109 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>Total Count</th>\n",
        "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Ranges</th>\n",
+       "      <th>Age Ranges</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;10</th>\n",
-       "      <td>17</td>\n",
-       "      <td>2.95%</td>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>8</td>\n",
+       "      <td>212.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10-14</th>\n",
-       "      <td>22</td>\n",
-       "      <td>3.82%</td>\n",
+       "      <th>10-14</th>\n",
+       "      <td>8</td>\n",
+       "      <td>275.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15-19</th>\n",
-       "      <td>107</td>\n",
-       "      <td>18.58%</td>\n",
+       "      <th>15-19</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1337.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20-24</th>\n",
-       "      <td>258</td>\n",
-       "      <td>44.79%</td>\n",
+       "      <th>20-24</th>\n",
+       "      <td>8</td>\n",
+       "      <td>3225.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-29</th>\n",
-       "      <td>77</td>\n",
-       "      <td>13.37%</td>\n",
+       "      <th>25-29</th>\n",
+       "      <td>8</td>\n",
+       "      <td>962.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30-34</th>\n",
-       "      <td>52</td>\n",
-       "      <td>9.03%</td>\n",
+       "      <th>30-34</th>\n",
+       "      <td>8</td>\n",
+       "      <td>650.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35-39</th>\n",
-       "      <td>31</td>\n",
-       "      <td>5.38%</td>\n",
+       "      <th>35-39</th>\n",
+       "      <td>8</td>\n",
+       "      <td>387.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40+</th>\n",
-       "      <td>12</td>\n",
-       "      <td>2.08%</td>\n",
+       "      <th>40+</th>\n",
+       "      <td>8</td>\n",
+       "      <td>150.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Total Count Percentage of Players\n",
-       "<10             17                 2.95%\n",
-       "10-14           22                 3.82%\n",
-       "15-19          107                18.58%\n",
-       "20-24          258                44.79%\n",
-       "25-29           77                13.37%\n",
-       "30-34           52                 9.03%\n",
-       "35-39           31                 5.38%\n",
-       "40+             12                 2.08%"
+       "                       Total Count  Percentage of Players\n",
+       "Age Ranges Age Ranges                                    \n",
+       "<10        <10                   8                  212.5\n",
+       "10-14      10-14                 8                  275.0\n",
+       "15-19      15-19                 8                 1337.5\n",
+       "20-24      20-24                 8                 3225.0\n",
+       "25-29      25-29                 8                  962.5\n",
+       "30-34      30-34                 8                  650.0\n",
+       "35-39      35-39                 8                  387.5\n",
+       "40+        40+                   8                  150.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "bins = [0, 9.9, 14.9, 19.9, 24.9, 29.9, 34.9, 39.9, 150]\n",
+    "labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "purchase_data[\"Age Ranges\"] = pd.cut(purchase_data[\"Age\"], bins=bins, labels=labels)\n",
+    "\n",
+    "age_range = purchase_data[[\"SN\", \"Age Ranges\"]]\n",
+    "age_range = age_range.drop_duplicates()\n",
+    "age_range = age_range.groupby(\"Age Ranges\")\n",
+    "#age_range.head()\n",
+    "\n",
+    "age_range_count = []\n",
+    "age_range_count = age_range[\"Age Ranges\"].value_counts()\n",
+    "age_range_total = len(age_range[\"Age Ranges\"])\n",
+    "age_range_percentage = []\n",
+    "for age in age_range:\n",
+    "    age_range_percentage = (age_range_count[age]/age_range_total)*100\n",
+    "\n",
+    "#age_demographics_df = pd.DataFrame({\"Total Count\": age_range_total, \"Percentage of Players\": age_range_percentage})\n",
+    "#age_demographics_df[\"Percentage of Players\"] = age_demographics_df[\"Total Count\"]/players_count\n",
+    "#age_demographics_df\n"
+   ]
   },
   {
    "cell_type": "markdown",
