--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -429,96 +429,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>113</td>\n",
-       "      <td>$3.20</td>\n",
-       "      <td>$361.94</td>\n",
-       "      <td>$4.47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>652</td>\n",
-       "      <td>$3.02</td>\n",
-       "      <td>$1,967.64</td>\n",
-       "      <td>$4.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>15</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$50.19</td>\n",
-       "      <td>$4.56</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
-       "\n",
-       "                      Total Purchase Value Avg Total Purchase per Person  \n",
-       "Gender                                                                    \n",
-       "Female                             $361.94                         $4.47  \n",
-       "Male                             $1,967.64                         $4.07  \n",
-       "Other / Non-Disclosed               $50.19                         $4.56  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "If using all scalar values, you must pass an index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-287140f3ffbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m gender_purchases_df = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": avg_purchase_price, \n\u001b[0;32m---> 17\u001b[0;31m                                     \"Total Purchase Value\": total_purchase_value, \"Avg Total Purchase per Person\": avg_total_per_person})\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mgender_purchases_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    433\u001b[0m             )\n\u001b[1;32m    434\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 435\u001b[0;31m             \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    436\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    437\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36minit_dict\u001b[0;34m(data, index, columns, dtype)\u001b[0m\n\u001b[1;32m    252\u001b[0m             \u001b[0marr\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_datetime64tz_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0marr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m         ]\n\u001b[0;32m--> 254\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    255\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    256\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36marrays_to_mgr\u001b[0;34m(arrays, arr_names, index, columns, dtype)\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0;31m# figure out the index, if necessary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mensure_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36mextract_index\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    353\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mindexes\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mraw_lengths\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 355\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"If using all scalar values, you must pass an index\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    356\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhave_series\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: If using all scalar values, you must pass an index"
+     ]
     }
    ],
    "source": [
-    "#purchases_by_gender_df = purchase_data[[\"SN\", \"Gender\", \"Purchase ID\", \"Price\"]]\n",
-    "#purchase_count = len(purchases_by_gender_df[\"Purchase ID\"])\n",
-    "#avg_purchase_price = purchases_by_gender_df[\"Price\"].sum()/purchase_count\n",
-    "#total_purchase_value = \n",
-    "#avg_total_per_person = \n",
+    "purchases_by_gender_df = purchase_data[[\"SN\", \"Gender\", \"Purchase ID\", \"Price\"]]\n",
+    "purchase_count = len(purchases_by_gender_df[\"Purchase ID\"])\n",
+    "avg_purchase_price = purchases_by_gender_df[\"Price\"].sum()/purchase_count\n",
+    "total_purchase_value = purchases_by_gender_df[\"Price\"].sum()\n",
     "\n",
-    "gender_groups = purchase_df.groupby([\"Gender\"])"
+    "purchases_by_gender_df = purchases_by_gender_df.drop_duplicates()\n",
+    "\n",
+    "#Calculate the total number of players\n",
+    "SN_total = len(purchases_by_gender_df[\"SN\"])\n",
+    "\n",
+    "avg_total_per_person = total_purchase_value/SN_total\n",
+    "#purchases_by_gender_df.head()\n",
+    "\n",
+    "\n",
+    "gender_purchases_df = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": avg_purchase_price, \n",
+    "                                    \"Total Purchase Value\": total_purchase_value, \"Avg Total Purchase per Person\": avg_total_per_person})\n",
+    "gender_purchases_df.head()"
    ]
   },
   {
@@ -552,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -576,84 +523,68 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>Total Count</th>\n",
        "      <th>Percentage of Players</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>8</td>\n",
-       "      <td>212.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <th>10-14</th>\n",
-       "      <td>8</td>\n",
-       "      <td>275.0</td>\n",
+       "      <th>20-24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>2.951389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15-19</th>\n",
-       "      <th>15-19</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1337.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <th>20-24</th>\n",
-       "      <td>8</td>\n",
-       "      <td>3225.0</td>\n",
+       "      <td>107</td>\n",
+       "      <td>3.819444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-29</th>\n",
-       "      <th>25-29</th>\n",
-       "      <td>8</td>\n",
-       "      <td>962.5</td>\n",
+       "      <td>77</td>\n",
+       "      <td>18.576389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30-34</th>\n",
-       "      <th>30-34</th>\n",
-       "      <td>8</td>\n",
-       "      <td>650.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>44.791667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35-39</th>\n",
-       "      <th>35-39</th>\n",
-       "      <td>8</td>\n",
-       "      <td>387.5</td>\n",
+       "      <td>31</td>\n",
+       "      <td>13.368056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>9.027778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>5.381944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40+</th>\n",
-       "      <th>40+</th>\n",
-       "      <td>8</td>\n",
-       "      <td>150.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2.083333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Total Count  Percentage of Players\n",
-       "Age Ranges Age Ranges                                    \n",
-       "<10        <10                   8                  212.5\n",
-       "10-14      10-14                 8                  275.0\n",
-       "15-19      15-19                 8                 1337.5\n",
-       "20-24      20-24                 8                 3225.0\n",
-       "25-29      25-29                 8                  962.5\n",
-       "30-34      30-34                 8                  650.0\n",
-       "35-39      35-39                 8                  387.5\n",
-       "40+        40+                   8                  150.0"
+       "       Total Count  Percentage of Players\n",
+       "20-24          258               2.951389\n",
+       "15-19          107               3.819444\n",
+       "25-29           77              18.576389\n",
+       "30-34           52              44.791667\n",
+       "35-39           31              13.368056\n",
+       "10-14           22               9.027778\n",
+       "<10             17               5.381944\n",
+       "40+             12               2.083333"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,19 +596,26 @@
     "\n",
     "age_range = purchase_data[[\"SN\", \"Age Ranges\"]]\n",
     "age_range = age_range.drop_duplicates()\n",
-    "age_range = age_range.groupby(\"Age Ranges\")\n",
-    "#age_range.head()\n",
+    "#age_range = age_range.groupby(\"Age Ranges\")\n",
+    "age_range.head()\n",
     "\n",
     "age_range_count = []\n",
     "age_range_count = age_range[\"Age Ranges\"].value_counts()\n",
     "age_range_total = len(age_range[\"Age Ranges\"])\n",
-    "age_range_percentage = []\n",
-    "for age in age_range:\n",
-    "    age_range_percentage = (age_range_count[age]/age_range_total)*100\n",
     "\n",
-    "#age_demographics_df = pd.DataFrame({\"Total Count\": age_range_total, \"Percentage of Players\": age_range_percentage})\n",
-    "#age_demographics_df[\"Percentage of Players\"] = age_demographics_df[\"Total Count\"]/players_count\n",
-    "#age_demographics_df\n"
+    "age_range_percentage = [(age_range_count[0]/age_range_total)*100,\n",
+    "                       (age_range_count[1]/age_range_total)*100,\n",
+    "                       (age_range_count[2]/age_range_total)*100,\n",
+    "                        (age_range_count[3]/age_range_total)*100,\n",
+    "                        (age_range_count[4]/age_range_total)*100, \n",
+    "                        (age_range_count[5]/age_range_total)*100, \n",
+    "                        (age_range_count[6]/age_range_total)*100, \n",
+    "                        (age_range_count[7]/age_range_total)*100] \n",
+    "\n",
+    "age_demographics_df = pd.DataFrame({\"Total Count\": age_range_count, \"Percentage of Players\": age_range_percentage}) \n",
+    "#age_demographics_df[\"Percentage of Players\"] = age_range_df[\"Percentage of Players\"].map(\"{:.2f}%\".format)\n",
+    "age_demographics_df.sort_index()\n",
+    "age_demographics_df"
    ]
   },
   {
