Updated files in progress

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -12,54 +12,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dependencies and Setup\n",
-    "import pandas as pd\n",
-    "\n",
-    "# File to Load (Remember to Change These)\n",
-    "school_data_to_load = \"Resources/schools_complete.csv\"\n",
-    "student_data_to_load = \"Resources/students_complete.csv\"\n",
-    "\n",
-    "# Read School and Student Data File and store into Pandas DataFrames\n",
-    "school_data = pd.read_csv(school_data_to_load)\n",
-    "student_data = pd.read_csv(student_data_to_load)\n",
-    "\n",
-    "# Combine the data into a single dataset.  \n",
-    "school_data_complete = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## District Summary\n",
-    "\n",
-    "* Calculate the total number of schools\n",
-    "\n",
-    "* Calculate the total number of students\n",
-    "\n",
-    "* Calculate the total budget\n",
-    "\n",
-    "* Calculate the average math score \n",
-    "\n",
-    "* Calculate the average reading score\n",
-    "\n",
-    "* Calculate the percentage of students with a passing math score (70 or greater)\n",
-    "\n",
-    "* Calculate the percentage of students with a passing reading score (70 or greater)\n",
-    "\n",
-    "* Calculate the percentage of students who passed math **and** reading (% Overall Passing)\n",
-    "\n",
-    "* Create a dataframe to hold the above results\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -82,46 +34,213 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Total Schools</th>\n",
-       "      <th>Total Students</th>\n",
-       "      <th>Total Budget</th>\n",
-       "      <th>Average Math Score</th>\n",
-       "      <th>Average Reading Score</th>\n",
-       "      <th>% Passing Math</th>\n",
-       "      <th>% Passing Reading</th>\n",
-       "      <th>% Overall Passing</th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>15</td>\n",
-       "      <td>39,170</td>\n",
-       "      <td>$24,649,428.00</td>\n",
-       "      <td>78.985371</td>\n",
-       "      <td>81.87784</td>\n",
-       "      <td>74.980853</td>\n",
-       "      <td>85.805463</td>\n",
-       "      <td>65.172326</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dr. Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Schools Total Students    Total Budget  Average Math Score  \\\n",
-       "0             15         39,170  $24,649,428.00           78.985371   \n",
+       "   Student ID       student_name gender grade        school_name  \\\n",
+       "0           0       Paul Bradley      M   9th  Huang High School   \n",
+       "1           1       Victor Smith      M  12th  Huang High School   \n",
+       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
+       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
+       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
        "\n",
-       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
-       "0               81.87784       74.980853          85.805463          65.172326  "
+       "   reading_score  math_score  School ID      type  size   budget  \n",
+       "0             66          79          0  District  2917  1910635  \n",
+       "1             94          61          0  District  2917  1910635  \n",
+       "2             90          60          0  District  2917  1910635  \n",
+       "3             67          58          0  District  2917  1910635  \n",
+       "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Dependencies and Setup\n",
+    "import pandas as pd\n",
+    "\n",
+    "# File to Load (Remember to Change These)\n",
+    "school_data_to_load = \"Resources/schools_complete.csv\"\n",
+    "student_data_to_load = \"Resources/students_complete.csv\"\n",
+    "\n",
+    "# Read School and Student Data File and store into Pandas DataFrames\n",
+    "school_data = pd.read_csv(school_data_to_load)\n",
+    "student_data = pd.read_csv(student_data_to_load)\n",
+    "\n",
+    "# Combine the data into a single dataset.  \n",
+    "school_data_complete = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
+    "school_data_complete.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## District Summary\n",
+    "\n",
+    "* Calculate the total number of schools\n",
+    "* Calculate the total number of students\n",
+    "* Calculate the total budget\n",
+    "* Calculate the average math score \n",
+    "* Calculate the average reading score\n",
+    "* Calculate the percentage of students with a passing math score (70 or greater)\n",
+    "* Calculate the percentage of students with a passing reading score (70 or greater)\n",
+    "* Calculate the percentage of students who passed math **and** reading (% Overall Passing)\n",
+    "* Create a dataframe to hold the above results\n",
+    "* Optional: give the displayed data cleaner formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Schools</th>        <th class=\"col_heading level0 col1\" >Total Students</th>        <th class=\"col_heading level0 col2\" >Total Budget</th>        <th class=\"col_heading level0 col3\" >Average Math Score</th>        <th class=\"col_heading level0 col4\" >Average Reading Score</th>        <th class=\"col_heading level0 col5\" >% Passing Math</th>        <th class=\"col_heading level0 col6\" >% Passing Reading</th>        <th class=\"col_heading level0 col7\" >% Overall Passing</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col0\" class=\"data row0 col0\" >15</td>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col1\" class=\"data row0 col1\" >39,170</td>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col2\" class=\"data row0 col2\" >$24,649,428.00</td>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col3\" class=\"data row0 col3\" >78.99</td>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col4\" class=\"data row0 col4\" >81.88</td>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col5\" class=\"data row0 col5\" >74.98%</td>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col6\" class=\"data row0 col6\" >85.81%</td>\n",
+       "                        <td id=\"T_910e9868_5c48_11eb_bd48_24a074ed0068row0_col7\" class=\"data row0 col7\" >65.17%</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7fd37908fcc0>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grp = school_data_complete.groupby('school_name')\n",
+    "\n",
+    "total_students = school_data_complete.student_name.count()\n",
+    "passing_math_count = school_data_complete.loc[school_data_complete[\"math_score\"] >= 70][\"math_score\"].count()\n",
+    "passing_reading_count = school_data_complete.loc[school_data_complete[\"reading_score\"] >= 70][\"reading_score\"].count()\n",
+    "passing_overall_count = school_data_complete.loc[(school_data_complete[\"reading_score\"] >= 70) & (school_data_complete[\"math_score\"] >= 70)][\"Student ID\"].count()\n",
+    "\n",
+    "district_summary = pd.DataFrame({\n",
+    "    'Total Schools': [school_data_complete.school_name.nunique()],\n",
+    "    'Total Students': [total_students],\n",
+    "    'Total Budget': [grp.budget.max().sum()],\n",
+    "    'Average Math Score': [school_data_complete[\"math_score\"].sum()/total_students],\n",
+    "    'Average Reading Score': [school_data_complete[\"reading_score\"].sum()/total_students],\n",
+    "    '% Passing Math': [(passing_math_count/total_students)*100],\n",
+    "    '% Passing Reading': [(passing_reading_count/total_students)*100],\n",
+    "    '% Overall Passing': [(passing_overall_count/total_students)*100]\n",
+    "    \n",
+    "})\n",
+    "\n",
+    "#genders_df[\"Percentage of Players\"] = genders_df[\"Percentage of Players\"].map(\"{:.2f}%\".format)\n",
+    "\n",
+    "district_summary.style.format({\"Total Students\": \"{:,}\",\n",
+    "                               \"Total Budget\": \"${:,.2f}\", \n",
+    "                               \"Average Reading Score\": \"{:.2f}\", \n",
+    "                               \"Average Math Score\": \"{:.2f}\", \n",
+    "                               \"% Passing Math\": \"{:.2f}%\", \n",
+    "                               \"% Passing Reading\": \"{:.2f}%\", \n",
+    "                               \"% Overall Passing\": \"{:.2f}%\" \n",
+    "})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1473,9 +1592,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "mypydev",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "mypydev"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1487,7 +1606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
