--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -512,22 +512,28 @@
     }
    ],
    "source": [
+    "#Create dataframe with SN, Gender, Purchase ID and Price columns from the purchase dataframe\n",
     "purchases_by_gender_df = purchase_data[[\"SN\", \"Gender\", \"Purchase ID\", \"Price\"]]\n",
+    "#calculate purchase count off length of Purchase ID column\n",
     "purchase_count = len(purchases_by_gender_df[\"Purchase ID\"])\n",
+    "#Group by gender and count the number of values in SN column to get count of purchases by gender \n",
     "gender_purchase_count = purchases_by_gender_df.groupby([\"Gender\"]).count()[\"SN\"]\n",
+    "#Group by Gender and sum the Price column to get total purchase value by gender\n",
     "total_purchase_value = purchases_by_gender_df.groupby([\"Gender\"]).sum()[\"Price\"]\n",
+    "#Get average price spent per person\n",
     "avg_total_per_person = total_purchase_value/purchase_count\n",
-    "\n",
+    "#Remove duplicates\n",
     "purchases_by_gender_df = purchases_by_gender_df.drop_duplicates()\n",
-    "\n",
+    "#Get count of unique screen names by Gender\n",
     "SN_total = purchases_by_gender_df.groupby([\"Gender\"]).count()[\"SN\"]\n",
-    "\n",
+    "#calculate average purchase price \n",
     "avg_purchase_price = total_purchase_value/SN_total\n",
-    "\n",
+    "#calculate average per person with total purchase value by gender divided by the gender count.\n",
     "avg_total_per_person = total_purchase_value/genders_count\n",
-    "\n",
+    "#Create dataframe and assign columns \n",
     "gender_purchases_df = pd.DataFrame({\"Purchase Count\": gender_purchase_count, \"Average Purchase Price\": avg_purchase_price, \n",
     "                                    \"Total Purchase Value\": total_purchase_value, \"Avg Total Purchase per Person\": avg_total_per_person})\n",
+    "#formatting\n",
     "gender_purchases_df[\"Average Purchase Price\"] = gender_purchases_df[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
     "gender_purchases_df[\"Total Purchase Value\"] = gender_purchases_df[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
     "gender_purchases_df[\"Avg Total Purchase per Person\"] = gender_purchases_df[\"Avg Total Purchase per Person\"].map(\"${:.2f}\".format)\n",
@@ -1000,8 +1006,6 @@
     "\n",
     "SN_purchases_df = pd.DataFrame({\"Purchase Count\": SN_purchase_count, \"Average Purchase Price\": SN_avg_purchase_price, \n",
     "                                    \"Total Purchase Value\": SN_total_purchase_value})\n",
-    "#SN_purchases_df[\"Average Purchase Price\"] = SN_purchases_df[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
-    "#SN_purchases_df[\"Total Purchase Value\"] = SN_purchases_df[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
     "\n",
     "SN_purchases_df.sort_values([\"Total Purchase Value\"], ascending = False).head()\n"
    ]
