--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1322,37 +1322,157 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "bins = [0, 584.9, 629.9, 644.9, 679.9, 10000]\n",
-    "labels = [\"<$585\", \"$585-630\", \"$630-645\", \"$645-680\"]\n",
-    "school_summary[\"Age Ranges\"] = pd.cut(purchase_data[\"Age\"], bins=bins, labels=labels)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'school_performance' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-111-3d9a22fa9fe0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m585\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m630\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m645\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m680\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"<$585\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$585-630\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$630-645\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$645-680\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mschool_performance\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Spending Ranges (Per Student)\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mschool_summary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Per Student Budget\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbins\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbins\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mschool_performance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'school_performance' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fd37b279da0>"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bins = [0, 585, 630, 645, 680]\n",
+    "bins = [0, 584.9, 629.9, 644.9, 10000]\n",
     "labels = [\"<$585\", \"$585-630\", \"$630-645\", \"$645-680\"]\n",
     "school_data_complete[\"Spending Ranges (Per Student)\"] = pd.cut(school_data_complete[\"budget\"]/school_data_complete[\"size\"], bins=bins, labels=labels)\n",
     "\n",
     "scores_by_school = school_data_complete.groupby(\"Spending Ranges (Per Student)\")\n",
+    "scores_by_school"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;$585</th>\n",
+       "      <td>83.363065</td>\n",
+       "      <td>83.964039</td>\n",
+       "      <td>93.702889</td>\n",
+       "      <td>96.686558</td>\n",
+       "      <td>90.640704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$585-630</th>\n",
+       "      <td>79.982873</td>\n",
+       "      <td>82.312643</td>\n",
+       "      <td>79.109851</td>\n",
+       "      <td>88.513145</td>\n",
+       "      <td>70.939239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$630-645</th>\n",
+       "      <td>77.821056</td>\n",
+       "      <td>81.301007</td>\n",
+       "      <td>70.623565</td>\n",
+       "      <td>82.600247</td>\n",
+       "      <td>58.841194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$645-680</th>\n",
+       "      <td>77.049297</td>\n",
+       "      <td>81.005604</td>\n",
+       "      <td>66.230813</td>\n",
+       "      <td>81.109397</td>\n",
+       "      <td>53.528791</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Average Math Score  Average Reading Score  \\\n",
+       "Spending Ranges (Per Student)                                              \n",
+       "<$585                                   83.363065              83.964039   \n",
+       "$585-630                                79.982873              82.312643   \n",
+       "$630-645                                77.821056              81.301007   \n",
+       "$645-680                                77.049297              81.005604   \n",
+       "\n",
+       "                               % Passing Math  % Passing Reading  \\\n",
+       "Spending Ranges (Per Student)                                      \n",
+       "<$585                               93.702889          96.686558   \n",
+       "$585-630                            79.109851          88.513145   \n",
+       "$630-645                            70.623565          82.600247   \n",
+       "$645-680                            66.230813          81.109397   \n",
+       "\n",
+       "                               % Overall Passing  \n",
+       "Spending Ranges (Per Student)                     \n",
+       "<$585                                  90.640704  \n",
+       "$585-630                               70.939239  \n",
+       "$630-645                               58.841194  \n",
+       "$645-680                               53.528791  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_total_students = scores_by_school[\"Student ID\"].count()\n",
+    "scores_math_average = scores_by_school[\"math_score\"].mean()\n",
+    "scores_reading_average = scores_by_school[\"reading_score\"].mean()\n",
+    "scores_passing_math = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/scores_total_students*100\n",
+    "scores_passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/scores_total_students*100\n",
+    "scores_passing_overall = school_data_complete[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)].groupby(\"Spending Ranges (Per Student)\")[\"Student ID\"].count()/scores_total_students*100\n",
     "\n",
-    "#working on finishing. \n"
+    "\n",
+    "scores_by_school = pd.DataFrame({'Average Math Score': scores_math_average,\n",
+    "                               'Average Reading Score': scores_reading_average,\n",
+    "                               '% Passing Math': scores_passing_math,\n",
+    "                               '% Passing Reading': scores_passing_reading,\n",
+    "                               '% Overall Passing': scores_passing_overall\n",
+    "                              })\n",
+    "\n",
+    "scores_by_school\n",
+    "#working on finishing. "
    ]
   },
   {
