Updated files for review

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -601,14 +601,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>258</td>\n",
-       "      <td>2.95%</td>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>5.38%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>9.03%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15-19</th>\n",
        "      <td>107</td>\n",
        "      <td>3.82%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>2.95%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-29</th>\n",
@@ -626,16 +636,6 @@
        "      <td>13.37%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>22</td>\n",
-       "      <td>9.03%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>17</td>\n",
-       "      <td>5.38%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>40+</th>\n",
        "      <td>12</td>\n",
        "      <td>2.08%</td>\n",
@@ -646,17 +646,17 @@
       ],
       "text/plain": [
        "       Total Count Percentage of Players\n",
-       "20-24          258                 2.95%\n",
+       "<10             17                 5.38%\n",
+       "10-14           22                 9.03%\n",
        "15-19          107                 3.82%\n",
+       "20-24          258                 2.95%\n",
        "25-29           77                18.58%\n",
        "30-34           52                44.79%\n",
        "35-39           31                13.37%\n",
-       "10-14           22                 9.03%\n",
-       "<10             17                 5.38%\n",
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
     "\n",
     "age_demographics_df = pd.DataFrame({\"Total Count\": age_range_count, \"Percentage of Players\": age_range_percentage}) \n",
     "age_demographics_df[\"Percentage of Players\"] = age_demographics_df[\"Percentage of Players\"].map(\"{:.2f}%\".format)\n",
-    "age_demographics_df.sort_index()\n",
+    "age_demographics_df = age_demographics_df.sort_index()\n",
     "age_demographics_df"
    ]
   },
